force-app/zurich-base/main/default/objects/Objective__c/Objective__c.object-meta.xml
<CustomObject>
    <label>Objetivos</label>
    <nameField>
        <label>Objective Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Objetivos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>