force-app/zurich-base/main/default/objects/Objective__c/fields/April__c.field-meta.xml
<CustomField>
    <fullName>April__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Abril</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>