force-app/zurich-base/main/default/objects/Objective__c/fields/DaysLeft__c.field-meta.xml
<CustomField>
    <fullName>DaysLeft__c</fullName>
    <description>Remaining days to notify that the monthly plan ends.</description>
    <label>Days left</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>