force-app/zurich-base/main/default/objects/Objective__c/fields/Indicator__c.field-meta.xml
<CustomField>
    <fullName>Indicator__c</fullName>
    <label>Indicador</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PN</fullName>
            </value>
            <value>
                <fullName>Portfolio</fullName>
            </value>
            <value>
                <fullName>APES</fullName>
            </value>
            <value>
                <fullName>Ratio_Retention</fullName>
                <label>% Retention Ratio</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>