force-app/zurich-base/main/default/objects/Objective__c/fields/January__c.field-meta.xml
<CustomField>
    <fullName>January__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Enero</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>