force-app/zurich-base/main/default/objects/Objective__c/fields/June__c.field-meta.xml
<CustomField>
    <fullName>June__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Junio</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>