force-app/zurich-base/main/default/objects/Objective__c/fields/May__c.field-meta.xml
<CustomField>
    <fullName>May__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Mayo</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>