force-app/zurich-base/main/default/objects/Objective__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Producto</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Autos</fullName>
            </value>
            <value>
                <fullName>Hogar</fullName>
            </value>
            <value>
                <fullName>Inmuebles</fullName>
            </value>
            <value>
                <fullName>Accidentes</fullName>
            </value>
            <value>
                <fullName>Comercios</fullName>
            </value>
            <value>
                <fullName>Patrimoniales</fullName>
            </value>
            <value>
                <fullName>Resp. Civil</fullName>
            </value>
            <value>
                <fullName>Vida riesgo individual</fullName>
            </value>
            <value>
                <fullName>Vida riesgo colectivo</fullName>
            </value>
            <value>
                <fullName>Todos</fullName>
            </value>
            <value>
                <fullName>Resto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>