force-app/zurich-base/main/default/objects/Objective__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segmento</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Particulares</fullName>
            </value>
            <value>
                <fullName>PYMEs</fullName>
            </value>
            <value>
                <fullName>Grandes empresas</fullName>
            </value>
            <value>
                <fullName>Vida riesgo</fullName>
            </value>
            <value>
                <fullName>Todos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>