force-app/zurich-base/main/default/objects/Objective__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>January__c + February__c + March__c + April__c + May__c + June__c + July__c + August__c + September__c + October__c + November__c + December__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>