force-app/zurich-base/main/default/objects/Objective__c/recordTypes/FrequencyNotifications.recordType-meta.xml
<RecordType>
    <fullName>FrequencyNotifications</fullName>
    <active>true</active>
    <description>Record type in which the information regarding the remaining days to notify the end of the monthly plan is stored.</description>
    <label>Frequency of notifications</label>
</RecordType>