force-app/zurich-base/main/default/objects/Objective__c/recordTypes/Objectives.recordType-meta.xml
<RecordType>
    <fullName>Objectives</fullName>
    <active>true</active>
    <description>Record type for monthly plan objectives.</description>
    <label>Objectives</label>
</RecordType>